# Distributed under the terms of the GNU Lesser General Public License, v2.1 or later
# Copyright (C) 2008 Bartłomiej Burdukiewicz
# Contact: bartlomiej.burdukiewicz@gmail.com

add_subdirectory(archlinux)
add_subdirectory(debian)	
add_subdirectory(gentoo)	
add_subdirectory(slackware)
add_subdirectory(ubuntu)

